[package]
name = "tetsy-libp2p"
version = "0.36.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetsy peer-to-peer networking library"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "peer-to-peer", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/tetsy-libp2p"

[features]
default = [
    "deflate",
    "dns",
    "floodsub",
    "identify",
    "kad",
    "gossipsub",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "plain",
    "pnet",
    "relay",
    "req-res",
    "secp256k1",
    "tcp-async-io",
    "uds",
    "tetsy-wasm-ext",
    "websocket",
    "remux",
]
deflate = ["tetsy-libp2p-deflate"]
dns = ["tetsy-libp2p-dns"]
floodsub = ["tetsy-libp2p-floodsub"]
identify = ["tetsy-libp2p-identify"]
kad = ["tetsy-libp2p-kad"]
gossipsub = ["tetsy-libp2p-gossipsub"]
mdns = ["tetsy-libp2p-mdns"]
mplex = ["tetsy-libp2p-mplex"]
noise = ["tetsy-libp2p-noise"]
ping = ["tetsy-libp2p-ping"]
plain = ["plaintext"]
pnet = ["tetsy-libp2p-pnet"]
relay = ["tetsy-libp2p-relay"]
req-res = ["request-response"]
tcp-async-io = ["tetsy-libp2p-tcp", "tetsy-libp2p-tcp/async-io"]
tcp-tokio = ["tetsy-libp2p-tcp", "tetsy-libp2p-tcp/tokio"]
uds = ["tetsy-libp2p-uds"]
tetsy-wasm-ext = ["wasm-ext"]
wasm-ext-websocket = ["tetsy-wasm-ext", "wasm-ext/websocket"]
websocket = ["tetsy-libp2p-websocket"]
remux = ["libp2p-remux"]
secp256k1 = ["tetsy-libp2p-core/secp256k1"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
atomic = "0.5.0"
bytes = "1"
futures = "0.3.1"
lazy_static = "1.2"
tetsy-libp2p-core = { version = "0.27.2", path = "core",  default-features = false }
tetsy-libp2p-floodsub = { version = "0.28.0", path = "protocols/floodsub", optional = true }
tetsy-libp2p-gossipsub = { version = "0.29.0", path = "./protocols/gossipsub", optional = true }
tetsy-libp2p-identify = { version = "0.28.0", path = "protocols/identify", optional = true }
tetsy-libp2p-kad = { version = "0.29.0", path = "protocols/kad", optional = true }
tetsy-libp2p-mplex = { version = "0.27.1", path = "muxers/mplex", optional = true }
tetsy-libp2p-noise = { version = "0.29.0", path = "transports/noise", optional = true }
tetsy-libp2p-ping = { version = "0.28.0", path = "protocols/ping", optional = true }
plaintext = { version = "0.27.1", path = "transports/plaintext", optional = true }
tetsy-libp2p-pnet = { version = "0.20.0", path = "transports/pnet", optional = true }
tetsy-libp2p-relay = { version = "0.1.0", path = "protocols/relay", optional = true }
libp2p-request-response = { version = "0.10.0", path = "protocols/request-response", optional = true }
tetsy-libp2p-swarm = { version = "0.28.0", path = "swarm" }
libp2p-swarm-derive = { version = "0.22.0", path = "swarm-derive" }
tetsy-libp2p-uds = { version = "0.27.0", path = "transports/uds", optional = true }
wasm-ext = { version = "0.27.0", path = "transports/wasm-ext", default-features = false, optional = true }
libp2p-remux = { version = "0.30.1", path = "muxers/remux", optional = true }
multiaddr = { package = "tetsy-multiaddr", version = "0.11.1", path = "misc/multiaddr" }
parking_lot = "0.11.0"
pin-project = "1.0.0"
smallvec = "1.0"
wasm-timer = "0.2.4"

[target.'cfg(not(any(target_os = "emscripten", target_os = "wasi", target_os = "unknown")))'.dependencies]
libp2p-deflate = { version = "0.27.1", path = "transports/deflate", optional = true }
libp2p-dns = { version = "0.27.0", path = "transports/dns", optional = true }
libp2p-mdns = { version = "0.29.0", path = "protocols/mdns", optional = true }
libp2p-tcp = { version = "0.27.1", path = "transports/tcp", default-features = false, optional = true }
libp2p-websocket = { version = "0.28.0", path = "transports/websocket", optional = true }

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.8.1"
tokio = { version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }

[workspace]
members = [
    "core",
    "misc/multiaddr",
    "misc/multistream-select",
    "misc/peer-id-generator",
    "muxers/mplex",
    "muxers/remux",
    "protocols/floodsub",
    "protocols/gossipsub",
    "protocols/identify",
    "protocols/kad",
    "protocols/mdns",
    "protocols/ping",
    "protocols/relay",
    "protocols/request-response",
    "swarm",
    "swarm-derive",
    "transports/deflate",
    "transports/dns",
    "transports/noise",
    "transports/plaintext",
    "transports/pnet",
    "transports/tcp",
    "transports/uds",
    "transports/websocket",
    "transports/wasm-ext"
]

[[example]]
name = "chat-tokio"
required-features = ["tcp-tokio", "mdns"]
