[package]
name = "tetsy-libp2p-core"
version = "0.27.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Core traits and structs of tetsy-libp2p"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "crypto", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/tetsy-libp2p-core"

[dependencies]
asn1_der = "0.6.1"
bs58 = "0.4.0"
ed25519-dalek = "1.0.1"
either = "1.5"
fnv = "1.0"
futures = { version = "0.3.1", features = ["executor", "thread-pool"] }
futures-timer = "3"
lazy_static = "1.2"
libsecp256k1 = { version = "0.3.1", optional = true }
log = "0.4"
multiaddr = { package = "tetsy-multiaddr", version = "0.11", path = "../misc/multiaddr" }
multihash = { version = "0.13", default-features = false, features = ["std", "multihash-impl", "identity", "sha2"] }
tetsy-multistream-select = { version = "0.10", path = "../misc/multistream-select" }
parking_lot = "0.11.0"
pin-project = "1.0.0"
prost = "0.7"
rand = "0.7"
rw-stream-sink = "0.2.0"
sha2 = "0.9.1"
smallvec = "1.0"
thiserror = "1.0"
unsigned-varint = "0.7"
void = "1"
zeroize = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.16.9", features = ["alloc", "std"], default-features = false }

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
criterion = "0.3"
tetsy-libp2p-mplex = { path = "../muxers/mplex" }
tetsy-libp2p-noise = { path = "../transports/noise" }
tetsy-libp2p-tcp = { path = "../transports/tcp" }
multihash = { version = "0.13", default-features = false, features = ["arb"] }
quickcheck = "0.9.0"
wasm-timer = "0.2"

[build-dependencies]
prost-build = "0.7"

[features]
default = ["secp256k1"]
secp256k1 = ["libsecp256k1"]

[[bench]]
name = "peer_id"
harness = false
