[package]
name = "tetsy-libp2p-swarm"
version = "0.28.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "The tetsy-libp2p swarm"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "peer-to-peer", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/tetsy-libp2p-swarm"

[dependencies]
either = "1.6.0"
futures = "0.3.1"
tetsy-libp2p-core = { version = "0.27.0", path = "../core" }
log = "0.4"
rand = "0.7"
smallvec = "1.0"
wasm-timer = "0.2"
void = "1"

[dev-dependencies]
tetsy-libp2p-mplex = { path = "../muxers/mplex" }
tetsy-libp2p-noise = { path = "../transports/noise" }
quickcheck = "0.9.0"
rand = "0.7.2"
