[package]
name = "tet-libp2p-swarm"
edition = "2018"
description = "The tet-libp2p swarm"
version = "0.27.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tet-libp2p-swarm"

[dependencies]
either = "1.6.0"
futures = "0.3.1"
tet-libp2p-core = { version = "0.27.0", path = "../core" }
log = "0.4"
rand = "0.7"
smallvec = "1.0"
wasm-timer = "0.2"
void = "1"

[dev-dependencies]
tet-libp2p-mplex = { path = "../muxers/mplex" }
tet-libp2p-noise = { path = "../protocols/noise" }
quickcheck = "0.9.0"
rand = "0.7.2"
