[package]
name = "tet-libp2p-core-derive"
edition = "2018"
description = "Procedural macros of tet-libp2p-core"
version = "0.21.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tet-libp2p-core-derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.8", default-features = false, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
quote = "1.0"

[dev-dependencies]
libp2p = { path = "../.." }
