[package]
name = "tet-multiaddr"
edition = "2018"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Implementation of the tet-multiaddr format"
license = "MIT"
version = "0.11.0"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tet-libp2p-core"

[features]
default = ["url"]

[dependencies]
arrayref = "0.3"
bs58 = "0.4.0"
byteorder = "1.3.1"
data-encoding = "2.1"
multihash = { version = "0.13", default-features = false, features = ["std", "multihash-impl", "identity"] }
percent-encoding = "2.1.0"
serde = "1.0.70"
static_assertions = "1.1"
unsigned-varint = "0.6"
url = { version = "2.1.0", optional = true, default-features = false }

[dev-dependencies]
bincode = "1"
quickcheck = "0.9.0"
rand = "0.7.2"
serde_json = "1.0"
