[package]
name = "tetsy-multistream-select"
version = "0.10.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Multistream-select negotiation protocol for tetsy-libp2p"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "peer-to-peer", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/tetsy-multistream-select"

[dependencies]
bytes = "1"
futures = "0.3"
log = "0.4"
pin-project = "1.0.0"
smallvec = "1.0"
unsigned-varint = "0.7"

[dev-dependencies]
async-std = "1.6.2"
env_logger = "0.8"
tetsy-libp2p-core = { path = "../../core" }
tetsy-libp2p-mplex = { path = "../../muxers/mplex" }
plaintext = { path = "../../transports/plaintext" }
quickcheck = "0.9.0"
rand = "0.7.2"
rw-stream-sink = "0.2.1"
