[package]
name = "tet-multistream-select"
description = "Multistream-select negotiation protocol for tet-libp2p"
version = "0.10.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tet-multistream-select"

[dependencies]
bytes = "1"
futures = "0.3"
log = "0.4"
pin-project = "1.0.0"
smallvec = "1.0"
unsigned-varint = "0.6"

[dev-dependencies]
async-std = "1.6.2"
env_logger = "0.8"
tet-libp2p-core = { path = "../../core" }
mplex = { path = "../../muxers/mplex" }
plaintext = { path = "../../protocols/plaintext" }
quickcheck = "0.9.0"
rand = "0.7.2"
rw-stream-sink = "0.2.1"
