[package]
name = "mplex"
edition = "2018"
description = "Mplex multiplexing protocol for tet-libp2p"
version = "0.27.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/mplex"

[dependencies]
bytes = "1"
futures = "0.3.1"
asynchronous-codec = "0.5.0"
tet-libp2p-core = { version = "0.27.0", path = "../../core" }
log = "0.4"
nohash-hasher = "0.2"
parking_lot = "0.11"
rand = "0.7"
smallvec = "1.4"
unsigned-varint = { version = "0.6", features = ["asynchronous_codec"] }

[dev-dependencies]
async-std = "1.7.0"
criterion = "0.3"
env_logger = "0.8"
futures = "0.3"
tet-libp2p-tcp = { path = "../../transports/tcp" }
plaintext = { path = "../../protocols/plaintext" }
quickcheck = "0.9"
rand = "0.7"

[[bench]]
name = "split_send_size"
harness = false
