[package]
name = "libp2p-remux"
version = "0.30.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Remux multiplexing protocol for tetsy-libp2p"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "crypto", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/libp2p-remux"

[dependencies]
futures = "0.3.1"
tetsy-libp2p-core = { version = "0.27.0", path = "../../core" }
parking_lot = "0.11"
thiserror = "1.0"
# yamux = "0.8.1"
remux = "0.8.0"
