[package]
name = "tet-libp2p-remux"
edition = "2018"
description = "Remux multiplexing protocol for tet-libp2p"
version = "0.30.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tet-libp2p-remux"

[dependencies]
futures = "0.3.1"
tet-libp2p-core = { version = "0.27.0", path = "../../core" }
parking_lot = "0.11"
thiserror = "1.0"
remux = "0.8.0"
