[package]
name = "tetsy-libp2p-remux"
edition = "2018"
description = "Remux multiplexing protocol for libp2p"
version = "0.30.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = "0.3.1"
tetsy-libp2p-core = { version = "0.27.0", path = "../../core" }
parking_lot = "0.11"
thiserror = "1.0"
remux = "0.8.0"
