[package]
name = "tet-libp2p-deflate"
edition = "2018"
description = "Deflate encryption protocol for tet-libp2p"
version = "0.27.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tet-libp2p-deflate"

[dependencies]
futures = "0.3.1"
tet-libp2p-core = { version = "0.27.0", path = "../../core" }
flate2 = "1.0"

[dev-dependencies]
async-std = "1.6.2"
tet-libp2p-tcp = { path = "../../transports/tcp" }
quickcheck = "0.9"
rand = "0.7"
