[package]
name = "tetsy-libp2p-kad"
version = "0.29.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Kademlia protocol for tetsy-libp2p"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "crypto", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/tetsy-libp2p-kad"

[dependencies]
arrayvec = "0.5.1"
bytes = "1"
either = "1.5"
fnv = "1.0"
asynchronous-codec = "0.6"
futures = "0.3.1"
log = "0.4"
tetsy-libp2p-core = { version = "0.27.0", path = "../../core" }
tetsy-libp2p-swarm = { version = "0.28.0", path = "../../swarm" }
prost = "0.7"
rand = "0.7.2"
sha2 = "0.9.1"
smallvec = "1.0"
wasm-timer = "0.2"
uint = "0.9"
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }
void = "1.0"

[dev-dependencies]
futures-timer = "3.0"
tetsy-libp2p-noise = { path = "../../transports/noise" }
libp2p-yamux = { path = "../../muxers/yamux" }
quickcheck = "0.9.0"

[build-dependencies]
prost-build = "0.7"

