[package]
name = "tet-libp2p-kad"
edition = "2018"
description = "Kademlia protocol for tet-libp2p"
version = "0.28.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tet-libp2p-kad"

[dependencies]
arrayvec = "0.5.1"
bytes = "1"
either = "1.5"
fnv = "1.0"
asynchronous-codec = "0.5"
futures = "0.3.1"
log = "0.4"
tet-libp2p-core = { version = "0.27.0", path = "../../core" }
tet-libp2p-swarm = { version = "0.27.0", path = "../../swarm" }
prost = "0.7"
rand = "0.7.2"
sha2 = "0.9.1"
smallvec = "1.0"
wasm-timer = "0.2"
uint = "0.9"
unsigned-varint = { version = "0.6", features = ["asynchronous_codec"] }
void = "1.0"

[dev-dependencies]
futures-timer = "3.0"
tet-libp2p-noise = { path = "../noise" }
tet-libp2p-yamux = { path = "../../muxers/yamux" }
quickcheck = "0.9.0"

[build-dependencies]
prost-build = "0.7"

