[package]
name = "tetsy-libp2p-kad"
edition = "2018"
description = "Kademlia protocol for tetsy-libp2p"
version = "0.28.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
arrayvec = "0.5.1"
bytes = "1"
either = "1.5"
fnv = "1.0"
asynchronous-codec = "0.5"
futures = "0.3.1"
log = "0.4"
tetsy-libp2p-core = { version = "0.27.1", path = "../../core" }
tetsy-libp2p-swarm = { version = "0.27.1", path = "../../swarm" }
prost = "0.7"
rand = "0.7.2"
sha2 = "0.9.1"
smallvec = "1.0"
wasm-timer = "0.2"
uint-crate = "0.9.0"
unsigned-varint = { version = "0.6", features = ["asynchronous_codec"] }
void = "1.0"

[dev-dependencies]
futures-timer = "3.0"
tetsy-libp2p-noise = { path = "../noise" }
tetsy-libp2p-remux = { path = "../../muxers/remux" }
quickcheck = "0.9.0"

[build-dependencies]
prost-build = "0.7"

