[package]
name = "tetsy-libp2p-mdns"
edition = "2018"
version = "0.28.0"
description = "Implementation of the tetsy-libp2p mDNS discovery method"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tetsy-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tetsy-libp2p-gossipsub"

[dependencies]
async-io = "1.3.0"
data-encoding = "2.3.1"
dns-parser = "0.8.0"
futures = "0.3.8"
if-watch = "0.1.6"
lazy_static = "1.4.0"
tetsy-libp2p-core = { version = "0.27.0", path = "../../core" }
tetsy-libp2p-swarm = { version = "0.27.0", path = "../../swarm" }
log = "0.4.11"
rand = "0.7.3"
smallvec = "1.5.0"
socket2 = { version = "0.3.17", features = ["reuseport"] }
void = "1.0.2"

[dev-dependencies]
async-std = "1.7.0"
if-addrs = "0.6.5"
tokio = { version = "1.0.1", default-features = false, features = ["rt", "rt-multi-thread"] }
