[package]
name = "tet-libp2p-ping"
edition = "2018"
description = "Ping protocol for tet-libp2p"
version = "0.27.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tet-libp2p-ping"

[dependencies]
futures = "0.3.1"
tet-libp2p-core = { version = "0.27.0", path = "../../core" }
tet-libp2p-swarm = { version = "0.27.0", path = "../../swarm" }
log = "0.4.1"
rand = "0.7.2"
void = "1.0"
wasm-timer = "0.2"

[dev-dependencies]
async-std = "1.6.2"
tet-libp2p-tcp = { path = "../../transports/tcp" }
tet-libp2p-noise = { path = "../../protocols/noise" }
tet-libp2p-remux = { path = "../../muxers/remux" }
mplex = { path = "../../muxers/mplex" }
quickcheck = "0.9.0"
